--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.10"
 fortnite-api = "^3.2.1"
 nonebot2 = "^2.4.0"
 nonebot-adapter-onebot = "^2.4.6"
+nonebot-plugin-uninfo = "^0.6.5"
 nonebot-plugin-alconna = "^0.54.2"
 nonebot-plugin-localstore = "^0.7.3"
 nonebot-plugin-apscheduler = "^0.5.0"
@@ -24,7 +25,7 @@ nonebot2 = {version = "^2.4.0", extras = ["fastapi"]}
 
 [tool.nonebot]
 adapters = [{name="Onebot", module_name="nonebot.adapters.onebot.v11"}]
-plugins = ["nonebot_plugin_template"]
+plugins = ["nonebot_plugin_fortnite"]
 
 [build-system]
 requires = ["poetry-core"]
