--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "nonebot-plugin-fornite"
-version = "0.0.1"
+name = "nonebot-plugin-fortnite"
+version = "0.0.2"
 description = "堡垒之夜插件"
 authors = ["fllesser <fllessive@gmail.com>"]
 readme = "README.md"
