--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ keywords = ["nonebot", "nonebot2"]
 [tool.poetry.dependencies]
 python = "^3.10"
 fortnite-api = "^3.2.1"
-pillow = '^10.4.0'
+pillow = "^10.4.0"
+playwright = "^1.4.9.1"
 nonebot2 = "^2.4.0"
 nonebot-adapter-onebot = "^2.4.6"
 nonebot-plugin-uninfo = "^0.6.5"
