--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ keywords = ["nonebot", "nonebot2"]
 [tool.poetry.dependencies]
 python = "^3.10"
 httpx = "^0.27.2"
-fortnite-api = "^3.2.1"
 pillow = "^10.4.0"
 playwright = "^1.4.9.1"
 nonebot2 = "^2.4.0"
@@ -20,6 +19,7 @@ nonebot-plugin-uninfo = "^0.6.5"
 nonebot-plugin-alconna = "^0.54.2"
 nonebot-plugin-localstore = "^0.7.3"
 nonebot-plugin-apscheduler = "^0.5.0"
+fortnite-api = {version = "^3.2.1", extras = ["speed"]}
 
 [tool.poetry.group.test.dependencies]
 nb-cli = "^1.4.2"
