--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ keywords = ["nonebot", "nonebot2"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-httpx = "^0.26.0"
+httpx = ">=0.27.0,<1.0.0"
 pillow = "^10.4.0"
 playwright = "^1.4.9.1"
 nonebot2 = "^2.4.0"
