--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot-plugin-fortnite"
-version = "0.1.3"
+version = "0.1.4"
 description = "堡垒之夜插件"
 authors = ["fllesser <fllessive@gmail.com>"]
 readme = "README.md"
@@ -15,10 +15,10 @@ httpx = ">=0.27.0,<1.0.0"
 pillow = "^10.4.0"
 playwright = "^1.4.9.1"
 nonebot2 = "^2.4.0"
-nonebot-plugin-uninfo = "^0.6.5"
-nonebot-plugin-alconna = "^0.54.2"
-nonebot-plugin-localstore = "^0.7.3"
-nonebot-plugin-apscheduler = "^0.5.0"
+nonebot-plugin-uninfo = ">=0.6.5,<1.0.0"
+nonebot-plugin-alconna = ">=0.54.2,<1.0.0"
+nonebot-plugin-localstore = ">=0.7.3,<1.0.0"
+nonebot-plugin-apscheduler = ">=0.5.0,<1.0.0"
 fortnite-api = {version = "^3.2.1", extras = ["speed"]}
 
 [tool.poetry.group.test.dependencies]
