--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,12 @@ keywords = ["nonebot", "nonebot2", "fortnite"]
 dependencies = [
     "httpx>=0.27.0,<1.0.0",
     "aiofiles>=24.0.0",
-    "pillow>=10.4.0",
-    "playwright>=1.4.9.1,<2.0.0",
+    "aiohttp>=3.11.18,<4.0.0",
+    "pillow>=11.2.1",
+    "playwright>=1.51.0,<2.0.0",
     "nonebot2>=2.4.2,<3.0.0",
-    "nonebot-plugin-uninfo>=0.6.5,<1.0.0",
-    "nonebot-plugin-alconna>=0.54.2,<1.0.0",
+    "nonebot-plugin-uninfo>=0.7.3,<1.0.0",
+    "nonebot-plugin-alconna>=0.57.2,<1.0.0",
     "nonebot-plugin-localstore>=0.7.3,<1.0.0",
     "nonebot-plugin-apscheduler>=0.5.0,<1.0.0",
     "fortnite-api[speed]>=3.2.1,<4.0.0",
@@ -26,19 +27,16 @@ plugins = ["nonebot_plugin_fortnite"]
 dev = [
     "nonebot2[fastapi]>=2.4.0,<3.0.0",
     "nonebot-adapter-onebot>=2.4.6,<3.0.0",
-    "ruff>=0.9.10,<1.0.0",
+    "ruff>=0.11.6,<1.0.0",
 ]
 
 test = [
     "nonebot2[fastapi]>=2.4.0,<3.0.0",
     "nonebug>=0.3.7,<1.0.0",
     "pytest-xdist>=3.6.1,<4.0.0",
-    "pytest-asyncio>=0.23.6,<1.0.0",
+    "pytest-asyncio>=0.26.0,<1.0.0",
 ]
 
-
-[tool.uv.workspace]
-exclude = [".docs"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
