🔧 chore: Refactor project configuration and plugin initialization
- Updated `pyproject.toml` to simplify `pythonpath` and enhance `executionEnvironments` for better path management.
- Renamed the startup function in `nonebot_plugin_fortnite` from `_` to `check_files` for improved clarity and functionality.
- Modified tests in `plugin_test.py` to call the new `check_files` function, ensuring proper initialization during testing.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ plugin-dirs = ["src"]
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
-pythonpath = [".", "src", "tests"]
+pythonpath = ["src"]
 addopts = [
     "-v",               # 详细输出
     "-s",               # 显示打印信息
@@ -103,15 +103,13 @@ keep-runtime-typing = true
 
 
 [tool.pyright]
+executionEnvironments = [
+    { root = "./tests", extraPaths = ["./src",] },
+    { root = "./src" },
+]
 pythonVersion = "3.10"
 pythonPlatform = "All"
 defineConstant = { PYDANTIC_V2 = true }
-executionEnvironments = [
-    { root = "./tests", extraPaths = [
-        "./",
-    ] },
-    { root = "./" },
-]
 typeCheckingMode = "standard"
 reportShadowedImports = false
 disableBytesTypePromotions = true
