--- a/.gitignore
+++ b/.gitignore
@@ -167,6 +167,7 @@ pyrightconfig.json
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+.DS_Store
 # VisualStudioCode
 .vscode/*
 !.vscode/settings.json
