🔧 chore: Format execution environments in pyproject.toml for improved readability
- Adjusted the formatting of the `executionEnvironments` section to enhance clarity by aligning the extraPaths array elements.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,7 +104,9 @@ keep-runtime-typing = true
 
 [tool.pyright]
 executionEnvironments = [
-    { root = "./tests", extraPaths = ["./src",] },
+    { root = "./tests", extraPaths = [
+        "./src",
+    ] },
     { root = "./src" },
 ]
 pythonVersion = "3.10"
