--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nonebot-plugin-fortnite"
-version = "0.2.2"
+version = "0.3.0"
 description = "堡垒之夜插件"
 authors = [{ name = "fllesser", email = "fllessive@gmail.com" }]
 readme = "README.md"
@@ -104,7 +104,9 @@ keep-runtime-typing = true
 
 [tool.pyright]
 executionEnvironments = [
-    { root = "./tests", extraPaths = ["./src",] },
+    { root = "./tests", extraPaths = [
+        "./src",
+    ] },
     { root = "./src" },
 ]
 pythonVersion = "3.10"
