🔧 chore: Update GitHub Actions workflow to use 'uv' for Playwright installation
- Modified the Playwright installation command in the CI workflow to utilize 'uv' for improved execution.

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Install playwright chromium
       run: |
-        playwright install chromium
+        uv run playwright install chromium
 
     - name: Run all tests
       run: |
