--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,13 +1,15 @@
-name: pytest
+name: Pytest
 
 on:
   push:
     branches:
       - 'master'
+    paths-ignore:
+      - 'README.md'
   pull_request:
 
 jobs:
-  build:
+  pytest:
     runs-on: ubuntu-latest
     env:
       LOG_LEVEL: DEBUG
@@ -17,6 +19,7 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
+          - "3.13"
 
     steps:
     - name: Checkout repository
@@ -26,15 +29,10 @@ jobs:
       uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ matrix.python-version }}
+        version: 'latest'
     
-    - name: Install Dependencies for all groups
-      run: |
-        uv sync --all-groups
-
-    - name: Install playwright chromium
-      run: |
-        uv run playwright install chromium
+    - name: Install Dependencies for test group
+      run: uv sync --group test
 
     - name: Run all tests
-      run: |
-        uv run pytest
+      run: uv run pytest
