--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dev = [
     "nonebot2[fastapi]>=2.4.3,<3.0.0",
     "nonebot-adapter-onebot>=2.4.6,<3.0.0",
     "ruff>=0.12.8,<1.0.0",
+    "bump-my-version>=1.2.1",
 ]
 
 test = [
@@ -115,3 +116,16 @@ defineConstant = { PYDANTIC_V2 = true }
 typeCheckingMode = "standard"
 reportShadowedImports = false
 disableBytesTypePromotions = true
+
+
+[tool.bumpversion]
+current_version = "0.3.3"
+commit = true
+message = "🔖 release: bump vesion from {current_version} to {new_version}"
+tag = true
+
+
+[[tool.bumpversion.files]]
+filename = "uv.lock"
+search = "name = \"nonebot-plugin-abs\"\nversion = \"{current_version}\""
+replace = "name = \"nonebot-plugin-abs\"\nversion = \"{new_version}\""
