--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "堡垒之夜插件"
 authors = [{ name = "fllesser", email = "fllessive@gmail.com" }]
 readme = "README.md"
 # 主页 https://github.com/fllesser/nonebot-plugin-fornite
-requires-python = ">=3.10,<3.13"
+requires-python = ">=3.10"
 keywords = ["nonebot", "nonebot2", "fortnite"]
 dependencies = [
     "httpx>=0.27.0,<1.0.0",
@@ -21,12 +21,17 @@ dependencies = [
     "fortnite-api[speed]>=3.2.1,<4.0.0",
 ]
 
+[project.urls]
+Homepage = "https://github.com/fllesser/nonebot-plugin-fortnite"
+Repository = "https://github.com/fllesser/nonebot-plugin-fortnite.git"
+Issues = "https://github.com/fllesser/nonebot-plugin-fortnite/issues"
+
 
 [dependency-groups]
 dev = [
     "nonebot2[fastapi]>=2.4.3,<3.0.0",
     "nonebot-adapter-onebot>=2.4.6,<3.0.0",
-    "ruff>=0.12.8,<1.0.0",
+    "ruff>=0.12.9,<1.0.0",
     "bump-my-version>=1.2.1",
 ]
 
@@ -127,5 +132,5 @@ tag = true
 
 [[tool.bumpversion.files]]
 filename = "uv.lock"
-search = "name = \"nonebot-plugin-abs\"\nversion = \"{current_version}\""
-replace = "name = \"nonebot-plugin-abs\"\nversion = \"{new_version}\""
+search = "name = \"nonebot-plugin-fortnite\"\nversion = \"{current_version}\""
+replace = "name = \"nonebot-plugin-fortnite\"\nversion = \"{new_version}\""
