--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,13 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.15,<4.0.0",
     "pillow>=11.0.0",
-    "playwright>=1.54.0,<2.0.0",
     "nonebot2>=2.4.3,<3.0.0",
     "nonebot-plugin-uninfo>=0.9.0,<1.0.0",
     "nonebot-plugin-alconna>=0.59.4,<1.0.0",
     "nonebot-plugin-localstore>=0.7.4,<1.0.0",
     "nonebot-plugin-apscheduler>=0.5.0,<1.0.0",
     "fortnite-api[speed]>=3.2.1,<4.0.0",
+    "nonebot-plugin-htmlrender>=0.6.7",
 ]
 
 [project.urls]
