--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
 
 test = [
     "nonebot2[fastapi]>=2.4.3,<3.0.0",
+    "nonebot-adapter-onebot>=2.4.6,<3.0.0",
     "nonebug>=0.4.3,<1.0.0",
     "pytest-xdist>=3.8.0,<4.0.0",
     "pytest-asyncio>=1.1.0,<1.2.0",
