--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 keywords = ["nonebot", "nonebot2", "fortnite"]
 dependencies = [
-    "httpx[h2]>=0.27.0,<1.0.0",
+    "httpx>=0.27.0,<1.0.0",
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.15,<4.0.0",
     "pillow>=11.0.0",
