--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,15 +36,35 @@ dev = [
 ]
 
 test = [
-    "nonebot2[fastapi]>=2.4.3,<3.0.0",
+    "nonebot2[fastapi]>=2.4.2,<3.0.0",
     "nonebot-adapter-onebot>=2.4.6,<3.0.0",
-    "nonebug>=0.4.3,<1.0.0",
+    "nonebug>=0.3.7,<1.0.0",
     "pytest-xdist>=3.8.0,<4.0.0",
     "pytest-asyncio>=1.1.0,<1.2.0",
+    "pytest-cov>=6.3.0",
+    "poethepoet>=0.36.0",
 ]
 
+[tool.uv]
+required-version = ">=0.8.14"
+default-groups = ["test", "dev"]
+
+[tool.poe.tasks]
+test = "pytest --cov=src --cov-report xml --junitxml=./junit.xml -n auto"
+bump = "bump-my-version bump"
+show-bump = "bump-my-version show-bump"
+
+[tool.coverage.report]
+exclude_lines = [
+    "raise NotImplementedError",
+    "if TYPE_CHECKING:",
+    "@overload",
+    "except ImportError:",
+]
+
+
 [tool.nonebot]
-plugin-dirs = ["src"]
+plugins = ["nonebot_plugin_fortnite"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
