--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ exclude_lines = [
     "if TYPE_CHECKING:",
     "@overload",
     "except ImportError:",
+    "except Exception:",
 ]
 
 [tool.nonebot]
