--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,13 +55,17 @@ bump = "bump-my-version bump"
 show-bump = "bump-my-version show-bump"
 
 [tool.coverage.report]
+show_missing = true # 相当于 --cov-report=term-missing:cite[1]
+omit = [ # 排除不需要统计的文件
+    "src/nonebot_plugin_fortnite/stats.py",
+]
 exclude_lines = [
     "raise NotImplementedError",
     "if TYPE_CHECKING:",
     "@overload",
     "except ImportError:",
+    "except Exception:",
 ]
-
 
 [tool.nonebot]
 plugins = ["nonebot_plugin_fortnite"]
