--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "nonebot-plugin-localstore>=0.7.4,<1.0.0",
     "nonebot-plugin-apscheduler>=0.5.0,<1.0.0",
     "fortnite-api[speed]>=3.2.1,<4.0.0",
-    "nonebot-plugin-htmlrender>=0.6.7",
+    "playwright>=1.55.0",
+    "nonebot-plugin-htmlrender>=0.6.8",
+    "numpy>=2.2.6",
 ]
 
 [project.urls]
