--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
     env:
       OS: ${{ matrix.os }}
       PYTHON_VERSION: ${{ matrix.python-version }}
+      UV_NO_SYNC: 1
 
     steps:
       - uses: actions/checkout@v5
@@ -52,10 +53,10 @@ jobs:
         run: uv sync --no-dev --frozen
 
       - name: Playwright install chromium-headless
-        run: uv run --no-sync playwright install chromium-headless-shell
+        run: uv run playwright install chromium-headless-shell
 
       - name: Run Pytest
-        run: uv run --no-sync poe test
+        run: uv run poe test
 
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
