--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         run: uv sync --no-dev --frozen
 
       - name: Playwright install chromium-headless
-        run: uv run playwright install chromium-headless-shell
+        run: uv run playwright install
 
       - name: Run Pytest
         run: uv run poe test
