--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = "堡垒之夜插件"
 authors = [{ name = "fllesser", email = "fllessive@gmail.com" }]
 readme = "README.md"
 # 主页 https://github.com/fllesser/nonebot-plugin-fornite
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 keywords = ["nonebot", "nonebot2", "fortnite"]
 dependencies = [
-    "httpx>=0.27.0,<1.0.0",
+    "httpx>=0.28.1,<1.0.0",
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.15,<4.0.0",
-    "pillow>=11.0.0",
+    "pillow>=11.3.0",
     "nonebot2>=2.4.3,<3.0.0",
     "nonebot-plugin-uninfo>=0.9.0,<1.0.0",
     "nonebot-plugin-alconna>=0.59.4,<1.0.0",
@@ -19,7 +19,7 @@ dependencies = [
     "nonebot-plugin-apscheduler>=0.5.0,<1.0.0",
     "fortnite-api[speed]>=3.2.1,<4.0.0",
     "nonebot-plugin-htmlrender>=0.6.8",
-    "numpy>=2.2.6",
+    "numpy>=2.3.3",
 ]
 
 [project.urls]
@@ -32,18 +32,19 @@ Issues = "https://github.com/fllesser/nonebot-plugin-fortnite/issues"
 dev = [
     "nonebot2[fastapi]>=2.4.3,<3.0.0",
     "nonebot-adapter-onebot>=2.4.6,<3.0.0",
-    "ruff>=0.12.11,<1.0.0",
-    "bump-my-version>=1.2.1",
+    "ruff>=0.13.2,<1.0.0",
+    "bump-my-version>=1.2.3",
+    "pre-commit>=4.3.0",
 ]
 
 test = [
-    "nonebot2[fastapi]>=2.4.2,<3.0.0",
+    "nonebot2[fastapi]>=2.4.3,<3.0.0",
     "nonebot-adapter-onebot>=2.4.6,<3.0.0",
-    "nonebug>=0.3.7,<1.0.0",
+    "nonebug>=0.4.3,<1.0.0",
     "pytest-xdist>=3.8.0,<4.0.0",
     "pytest-asyncio>=1.2.0,<1.3.0",
     "pytest-cov>=7.0.0",
-    "poethepoet>=0.36.0",
+    "poethepoet>=0.37.0",
 ]
 
 [tool.uv]
