--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,12 +31,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.11", "3.12", "3.13"]
         os: [ubuntu-latest, windows-latest, macos-latest]
 
     env:
       OS: ${{ matrix.os }}
       PYTHON_VERSION: ${{ matrix.python-version }}
+      UV_NO_SYNC: 1
 
     steps:
       - uses: actions/checkout@v5
@@ -51,11 +52,11 @@ jobs:
       - name: Install Dependencies for test group
         run: uv sync --no-dev --frozen
 
-      - name: Playwright install chromium-headless
-        run: uv run --no-sync playwright install chromium-headless-shell
+      - name: Playwright install chromium-headless-shell
+        run: uv run playwright install chromium-headless-shell
 
       - name: Run Pytest
-        run: uv run --no-sync poe test
+        run: uv run poe test
 
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
