--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,13 @@ jobs:
       - name: Install Dependencies for test group
         run: uv sync --no-dev --frozen
 
-      - name: Playwright install chromium-headless-shell
-        run: uv run playwright install chromium-headless-shell
+      - name: Install Playwright (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: uv run playwright install chromium-headless-shell --with-deps && uv run playwright install chromium-headless-shell --with-deps
+
+      - name: Install Playwright (non-Linux)
+        if: matrix.os != 'ubuntu-latest'
+        run: uv run playwright install chromium-headless-shell && uv run playwright install chromium-headless-shell
 
       - name: Run Pytest
         run: uv run poe test
