--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,11 +54,11 @@ jobs:
 
       - name: Install Playwright (Linux)
         if: matrix.os == 'ubuntu-latest'
-        run: uv run playwright install chromium-headless-shell --with-deps && uv run playwright install chromium-headless-shell --with-deps
+        run: uv run playwright install --with-deps && uv run playwright install --with-deps
 
       - name: Install Playwright (non-Linux)
         if: matrix.os != 'ubuntu-latest'
-        run: uv run playwright install chromium-headless-shell && uv run playwright install chromium-headless-shell
+        run: uv run playwright install  && uv run playwright install
 
       - name: Run Pytest
         run: uv run poe test
