--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ test = [
     "pytest-asyncio>=1.2.0,<1.3.0",
     "pytest-cov>=7.0.0",
     "poethepoet>=0.37.0",
+    "pytest-playwright>=0.7.1",
 ]
 
 [tool.uv]
