--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,13 @@ jobs:
       - name: Install Dependencies for test group
         run: uv sync --no-dev --locked
 
-      - name: Install Playwright
-        run: uv run playwright install chromium-headless-shell
+      - name: Install Playwright (Linux only)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: uv run playwright install --with-deps
+
+      - name: Install Playwright (Not Linux)
+        if: ${{ matrix.os != 'ubuntu-latest' }}
+        run: uv run playwright install
 
       - name: Run Pytest
         run: uv run poe test
