--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,13 +52,16 @@ jobs:
       - name: Install Dependencies for test group
         run: uv sync --no-dev --locked
 
+      - name: Playwright Uninstall
+        run: uv run playwright uninstall
+
       - name: Install Playwright (Linux only)
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: uv run playwright install --with-deps
+        run: uv run playwright install chromium-headless-shell --with-deps
 
       - name: Install Playwright (Not Linux)
         if: ${{ matrix.os != 'ubuntu-latest' }}
-        run: uv run playwright install
+        run: uv run playwright install chromium-headless-shell
 
       - name: Run Pytest
         run: uv run poe test
