--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,4 @@ LOG_LEVEL=DEBUG
 FASTAPI_RELOAD=false
 
 LOCALSTORE_USE_CWD=true
+htmlrender_browser_executable_path="/home/runner/.cache/ms-playwright/chromium-*/chrome-linux/headless_shell"
