--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "nonebot-plugin-alconna>=0.59.4,<1.0.0",
     "nonebot-plugin-localstore>=0.7.4,<1.0.0",
     "nonebot-plugin-apscheduler>=0.5.0,<1.0.0",
-    "nonebot-plugin-htmlrender>=0.6.8,<1.0.0",
+    "nonebot-plugin-htmlrender>=0.7.0a1",
 ]
 
 [project.urls]
