🧪 test: fixed resources checking (#41)
* 🧪 test: fixed resources checking

* 🐳 chore(lock): update uv lock

* 🐳 chore(deps): fixed deps

* 🐳 chore: update uv lock

* 🐳 chore(deps): add pytest-playwright

* 🐳 chore(deps): playwright 1.54.0

* 🐳 chore(deps): update playwright 1.55.0

* 🐳 chore: update test

* 🐎 ci: update ci

* 🐎 ci: update

* 🐎 ci: update

* 🧪 test: update .env.test

* 🐎 ci: 什么破玩意

* 🐳 chore: use 0.6.6

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,15 +50,15 @@ jobs:
           version: "latest"
 
       - name: Install Dependencies for test group
-        run: uv sync --no-dev --frozen
+        run: uv sync --no-dev --locked
 
-      - name: Install Playwright (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: uv run playwright install --with-deps && uv run playwright install --with-deps
+      - name: Install Playwright (Linux only)
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: uv run playwright install chromium-headless-shell --with-deps
 
-      - name: Install Playwright (non-Linux)
-        if: matrix.os != 'ubuntu-latest'
-        run: uv run playwright install  && uv run playwright install
+      - name: Install Playwright (Not Linux)
+        if: ${{ matrix.os != 'ubuntu-latest' }}
+        run: uv run playwright install chromium-headless-shell
 
       - name: Run Pytest
         run: uv run poe test
