--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,13 @@ dependencies = [
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.15,<4.0.0",
     "pillow>=11.2.1",
+    "fortnite-api[speed]>=3.2.1,<4.0.0",
     "nonebot2>=2.4.3,<3.0.0",
     "nonebot-plugin-uninfo>=0.9.0,<1.0.0",
     "nonebot-plugin-alconna>=0.59.4,<1.0.0",
     "nonebot-plugin-localstore>=0.7.4,<1.0.0",
     "nonebot-plugin-apscheduler>=0.5.0,<1.0.0",
-    "fortnite-api[speed]>=3.2.1,<4.0.0",
-    "nonebot-plugin-htmlrender>=0.6.8",
-    "numpy>=2.3.3",
+    "nonebot-plugin-htmlrender>=0.6.6",
 ]
 
 [project.urls]
@@ -45,6 +44,8 @@ test = [
     "pytest-asyncio>=1.2.0,<1.3.0",
     "pytest-cov>=7.0.0",
     "poethepoet>=0.37.0",
+    "playwright==1.55.0",
+    "nonebot-plugin-htmlrender==0.6.6",
 ]
 
 [tool.uv]
