🔧 chore: update nonebot2 dependency version in pyproject.toml and uv.lock to 2.4.4, and add FORTNITE_API_KEY to CI configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
       OS: ${{ matrix.os }}
       PYTHON_VERSION: ${{ matrix.python-version }}
       UV_NO_SYNC: 1
+      FORTNITE_API_KEY: ${{ secrets.FORTNITE_API_KEY }}
 
     steps:
       - uses: actions/checkout@v5
