--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,24 +20,22 @@ jobs:
 
   test:
     name: Test
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
     concurrency:
-      group: test-coverage-${{ github.ref }}-${{ matrix.python-version }}-${{ matrix.os }}
+      group: test-coverage-${{ github.ref }}-${{ matrix.python-version }}
       cancel-in-progress: true
 
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
 
     env:
-      OS: ${{ matrix.os }}
-      PYTHON_VERSION: ${{ matrix.python-version }}
       UV_NO_SYNC: 1
+      PYTHON_VERSION: ${{ matrix.python-version }}
       FORTNITE_API_KEY: ${{ secrets.FORTNITE_API_KEY }}
 
     steps:
@@ -53,13 +51,8 @@ jobs:
       - name: Install Dependencies for test group
         run: uv sync --no-dev --locked
 
-      - name: Install Playwright (Linux only)
-        if: ${{ matrix.os == 'ubuntu-latest' }}
+      - name: Install Playwright
         run: uv run playwright install chromium-headless-shell --with-deps
-
-      - name: Install Playwright (Not Linux)
-        if: ${{ matrix.os != 'ubuntu-latest' }}
-        run: uv run playwright install chromium-headless-shell
 
       - name: Run Pytest
         run: uv run poe test
@@ -68,11 +61,11 @@ jobs:
         if: ${{ !cancelled() }}
         uses: codecov/test-results-action@v1
         with:
-          env_vars: PYTHON_VERSION,PYDANTIC_VERSION
+          env_vars: PYTHON_VERSION
           use_oidc: true
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         with:
-          env_vars: PYTHON_VERSION,PYDANTIC_VERSION
+          env_vars: PYTHON_VERSION
           use_oidc: true
