--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,5 @@
+#:tombi schema.strict = false
+
 [project]
 name = "nonebot-plugin-fortnite"
 version = "0.5.1"
@@ -105,7 +107,7 @@ asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
 
 [tool.ruff]
-line-length = 120
+line-length = 88
 target-version = "py310"
 
 [tool.ruff.format]
