--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dev = [
   "bump-my-version>=1.2.4",
   "nonebot-adapter-onebot>=2.4.6,<3.0.0",
   "nonebot2[fastapi]>=2.4.3,<3.0.0",
-  "ruff>=0.14.4,<1.0.0",
+  "ruff>=0.14.7,<1.0.0",
+  { include-group = "test" },
 ]
 test = [
   "nonebot-adapter-onebot>=2.4.6,<3.0.0",
@@ -40,17 +41,26 @@ test = [
   "nonebot2[fastapi]>=2.4.4,<3.0.0",
   "nonebug>=0.4.3,<1.0.0",
   "playwright==1.55.0",
-  "poethepoet>=0.37.0",
+  "poethepoet>=0.38.0",
   "pytest-asyncio>=1.3.0,<1.4.0",
   "pytest-cov>=7.0.0",
   "pytest-xdist>=3.8.0,<4.0.0",
 ]
 
+[build-system]
+requires = ["uv_build>=0.9.0,<0.10.0"]
+build-backend = "uv_build"
+
+[tool.uv.sources]
+nonebug = { git = "https://github.com/fllesser/nonebug", rev = "pytest9" }
+
+
 [tool.bumpversion]
-current_version = "0.5.2"
-commit = true
-message = "🔖 release: bump vesion from {current_version} to {new_version}"
 tag = true
+commit = true
+current_version = "0.5.2"
+message = "release: bump vesion from {current_version} to {new_version}"
+
 
 [[tool.bumpversion.files]]
 filename = "uv.lock"
@@ -58,11 +68,8 @@ search = "name = \"nonebot-plugin-fortnite\"\nversion = \"{current_version}\""
 replace = "name = \"nonebot-plugin-fortnite\"\nversion = \"{new_version}\""
 
 [tool.coverage.report]
-show_missing = true  # 相当于 --cov-report=term-missing:cite[1]
-omit = [
-  # 排除不需要统计的文件
-  "src/nonebot_plugin_fortnite/stats.py",
-]
+show_missing = true # 相当于 --cov-report=term-missing:cite[1]
+omit = ["src/nonebot_plugin_fortnite/stats.py"]
 exclude_lines = [
   "raise NotImplementedError",
   "if TYPE_CHECKING:",
@@ -80,27 +87,26 @@ bump = "bump-my-version bump"
 show-bump = "bump-my-version show-bump"
 
 [tool.pyright]
+pythonVersion = "3.10"
+pythonPlatform = "All"
+defineConstant = { PYDANTIC_V2 = true }
+typeCheckingMode = "standard"
+disableBytesTypePromotions = true
 executionEnvironments = [
   { root = "./tests", extraPaths = [
     "./src",
   ] },
   { root = "./src" },
 ]
-pythonVersion = "3.10"
-pythonPlatform = "All"
-defineConstant = { PYDANTIC_V2 = true }
-typeCheckingMode = "standard"
-disableBytesTypePromotions = true
 
-[tool.pytest.ini_options]
+[tool.pytest]
 addopts = [
-  "-v",  # 详细输出
-  "-s",  # 显示打印信息
-  "--tb=short",  # 简短的错误回溯
-  "-ra",  # 显示所有测试结果摘要
-  "--strict-markers",  # 严格标记模式
-  # "--doctest-modules", # 运行文档测试
-  "--import-mode=prepend",  # 导入模式
+  "-v",                    # 详细输出
+  "-s",                    # 显示打印信息
+  "-ra",                   # 显示所有测试结果摘要
+  "--tb=short",            # 简短的错误回溯
+  "--strict-markers",      # 严格标记模式
+  "--import-mode=prepend", # 导入模式
 ]
 pythonpath = ["src"]
 asyncio_mode = "auto"
@@ -115,43 +121,34 @@ line-ending = "lf"
 
 [tool.ruff.lint]
 select = [
-  "F",  # Pyflakes
-  "W",  # pycodestyle warnings
-  "E",  # pycodestyle errors
-  "I",  # isort
-  "UP",  # pyupgrade
-  "ASYNC",  # flake8-async
-  "C4",  # flake8-comprehensions
-  "T10",  # flake8-debugger
-  "T20",  # flake8-print
-  "PYI",  # flake8-pyi
-  "PT",  # flake8-pytest-style
-  "Q",  # flake8-quotes
-  "TID",  # flake8-tidy-imports
-  "RUF",  # Ruff-specific rules
+  "F",     # Pyflakes
+  "W",     # pycodestyle warnings
+  "E",     # pycodestyle errors
+  "I",     # isort
+  "Q",     # flake8-quotes
+  "UP",    # pyupgrade
+  "PT",    # flake8-pytest-style
+  "C4",    # flake8-comprehensions
+  "T10",   # flake8-debugger
+  "T20",   # flake8-print
+  "PYI",   # flake8-pyi
+  "TID",   # flake8-tidy-imports
+  "RUF",   # Ruff-specific rules
+  "ASYNC", # flake8-async
 ]
 ignore = [
-  "E402",  # module-import-not-at-top-of-file
+  "E402",   # module-import-not-at-top-of-file
   "UP037",  # quoted-annotation
-  "RUF001",  # ambiguous-unicode-character-string
-  "RUF002",  # ambiguous-unicode-character-docstring
-  "RUF003",  # ambiguous-unicode-character-comment
-  "W191",  # indentation contains tabs
-  # "I001",   # isort: imports are incorrectly sorted
+  "RUF001", # ambiguous-unicode-character-string
+  "RUF002", # ambiguous-unicode-character-docstring
+  "RUF003", # ambiguous-unicode-character-comment
+  "W191",   # indentation contains tabs
 ]
 
 [tool.ruff.lint.isort]
-force-sort-within-sections = true
+length-sort = true
 known-first-party = ["tests/*"]
 extra-standard-library = ["typing_extensions"]
 
-[tool.ruff.lint.flake8-pytest-style]
-fixture-parentheses = false
-mark-parentheses = false
-
 [tool.ruff.lint.pyupgrade]
 keep-runtime-typing = true
-
-[tool.uv]
-required-version = ">=0.9.0"
-default-groups = ["test", "dev"]
