--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ plugins = ["nonebot_plugin_fortnite"]
 
 [tool.poe.tasks]
 test-matcher = "pytest tests/test_matcher.py --cov=src --cov-report xml --junitxml=./junit.xml"
-test-screenshot = "pytest tests/test_screenshot.py --cov=src --cov-report xml --junitxml=./junit.xml"
+test-screenshot = "pytest tests/test_screenshot.py --cov=src --cov-report xml --junitxml=./junit.xml -n auto"
 bump = "bump-my-version bump"
 show-bump = "bump-my-version show-bump"
 
