--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,10 +32,10 @@ dev = [
   "nonebot-adapter-onebot>=2.4.6,<3.0.0",
   "nonebot2[fastapi]>=2.4.4,<3.0.0",
   "ruff>=0.14.7,<1.0.0",
+  "nonebot-plugin-htmlrender==0.7.0a3",
   { include-group = "test" },
 ]
 test = [
-  "nonebot-plugin-htmlrender==0.6.7",
   "nonebug>=0.4.3,<1.0.0",
   "playwright==1.55.0",
   "poethepoet>=0.38.0",
