--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,17 @@
 default_install_hook_types: [pre-commit]
 ci:
-  autofix_commit_msg: ":rotating_light: auto fix by pre-commit hooks"
+  autofix_commit_msg: "chore: auto fix by pre-commit hooks"
   autofix_prs: true
   autoupdate_branch: master
   autoupdate_schedule: monthly
-  autoupdate_commit_msg: ":arrow_up: auto update by pre-commit hooks"
+  autoupdate_commit_msg: "chore: auto update by pre-commit hooks"
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.7
+    rev: v0.14.9
     hooks:
       - id: ruff-check
         args: [--fix, --exit-non-zero-on-fix]
-        stages: [pre-commit]
       - id: ruff-format
-        stages: [pre-commit]
 
   - repo: https://github.com/astral-sh/uv-pre-commit
     rev: 0.9.13
