--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,10 +88,11 @@ jobs:
 
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
-        uses: codecov/test-results-action@v1
+        uses: codecov/codecov-action@v5
         with:
           env_vars: PYTHON_VERSION
           use_oidc: true
+          report_type: "test_results"
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
@@ -132,10 +133,11 @@ jobs:
 
       - name: Upload test results to Codecov
         if: ${{ !cancelled() }}
-        uses: codecov/test-results-action@v1
+        uses: codecov/codecov-action@v5
         with:
           env_vars: PYTHON_VERSION
           use_oidc: true
+          report_type: "test_results"
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
