--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,8 +6,13 @@ ci:
   autoupdate_schedule: monthly
   autoupdate_commit_msg: "chore: auto update by pre-commit hooks"
 repos:
+  - repo: https://github.com/fllesser/ruff-rev-sync-pre-commit
+    rev: v1.0.0
+    hooks:
+      - id: ruff-rev-sync
+
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.14.9
+    rev: v0.14.10
     hooks:
       - id: ruff-check
         args: [--fix, --exit-non-zero-on-fix]
