--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ dependencies = [
   "nonebot-plugin-htmlrender>=0.6.7",
   "nonebot-plugin-localstore>=0.7.4,<1.0.0",
   "nonebot-plugin-uninfo>=0.10.1,<1.0.0",
-
 ]
 
 [project.urls]
@@ -28,7 +27,7 @@ Repository = "https://github.com/fllesser/nonebot-plugin-fortnite.git"
 [dependency-groups]
 dev = [
   "bump-my-version>=1.2.5",
-  "ruff>=0.14.9,<1.0.0",
+  "ruff>=0.14.10,<1.0.0",
   "playwright==1.55.0",
   "nonebot2[fastapi]>=2.4.4,<3.0.0",
   "nonebot-adapter-onebot>=2.4.6,<3.0.0",
@@ -37,8 +36,8 @@ dev = [
 ]
 test = [
   "nonebug>=0.4.3,<1.0.0",
-
-  "poethepoet>=0.38.0",
+  "pytest>=9.0.2,<10.0.0",
+  "poethepoet>=0.39.0",
   "pytest-asyncio>=1.3.0,<1.4.0",
   "pytest-cov>=7.0.0",
   "pytest-xdist>=3.8.0,<4.0.0",
@@ -49,7 +48,7 @@ requires = ["uv_build>=0.9.0,<0.10.0"]
 build-backend = "uv_build"
 
 [tool.uv.sources]
-nonebug = { git = "https://github.com/fllesser/nonebug", rev = "pytest9" }
+nonebug = { git = "https://github.com/fllesser/nonebug" }
 
 [tool.bumpversion]
 tag = true
